--- a/index.html
+++ b/index.html
@@ -26,25 +26,12 @@
     </style>
 
   </head>
-  <body onload="displayAllStudents();">
+  <body onload="getStudentMarks();">
 
     <table class="mui-table mui-table--bordered" id="display-student-info-table">
-  <thead>
-    <tr>
-      <th>Column 1</th>
-      <th>Column 2</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Cell 1-1</td>
-      <td>Cell 1-2</td>
-    </tr>
-    <tr>
-      <td>Cell 2-1</td>
-      <td>Cell 2-2</td>
-    </tr>
-  </tbody>
+      <table class="mui-table mui-table--bordered" id="display-student">
+
+  </table>
 </table>
 
   </body>
