--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="utf-8">
     <title></title>
 
-    <script type="text/javascript" src="display-student-info.js"></script>
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="//cdn.muicss.com/mui-0.9.41/css/mui.css">
     <script src="//cdn.muicss.com/mui-0.9.41/js/mui.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
+    <script type="text/javascript" src="display-student-info.js"></script>
     <style>
       /* Add font-smoothing */
       html,
@@ -31,7 +34,9 @@
       <table class="mui-table mui-table--bordered" id="display-student">
 
   </table>
+
 </table>
 
+  <div id="chart_div"></div>
   </body>
 </html>>
